
Legend: > item; # note; + added; * changed; ~ outdated; - deleted; ! not done.

TODO:
> think about route termination from included scripts (init, handlers), e.g. disable
  some global route flag by using some core functions: core_terminate_route(), etc
> покрыть тестами библиотеку /libs/inc.common.php т.к. там важный глобальный функционал

[0.4.20251118-0950]
* components folder renamed from /code to /coms
* many issues were found and fixed using the GPT chat :)

[0.4.20240728-0505]
+ Added $CONTEXT['CORE_ENABLE_BUFFER'] enable output buffering during handler process
+ Added $CONTEXT['CORE_RETURN_OUTPUT'] force output buffer return

[0.4.20240726-1549]
+ Added $CONTEXT['CORE_EXTRACT_VARS'] option which trigger automatically variables
  extraction into namespace of action and template files

[0.4.20240701-2036]
* Changed a lot in /libs/inc.request.php
  Adopting to URL-based multilanguage support, fixed & expanded functionality

[0.3.20230205-0350]
+ added alias '?dump-system' to /libs/inc.helpers.php
+ added more trace info to $SYS to /libs/inc.response.php

[0.3.20220912-0010]
+ Added sys_opt_insert() functions and according unit tests
+ Added HDL_INIT handler flag and according functionality

[0.3.20220902-1858]
+ Added int_to_bool() and bool_to_int() functions

[0.3.20220815-1324]
+ Added handler_route_path_to_url() function to get endpoint URL by given handler route path

[0.3.20220730-2325]
+ Added static_url_path() and static_url_root() functions to simply reach static files

[0.3.20220724-2129]
* folder /core/ renamed to /code/ because it is not a core, it is components codebase
* CORE_PATH/CORE_ROOT constants renamed to CODE_PATH/CODE_ROOT

[0.3.20220712-2350]
+ added common functions: is_int_or_float and is_float_or_int (synonims)

[0.3.20220625-11:11]
* Fixed debug function dump_js_log, now it works correct and with multiple arguments

[0.3.20220623-1530]
+ added common function: reload

[0.3.20220622-1430]